--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -4,13 +4,14 @@
 .amount {
   font-size: 20px;
   margin-right: 15px;
+  margin-top: 40px;
 }
 .input-box {
   border: none;
   outline: none;
-  width: 240px;
+  font-size: 22px !important;
   height: 30px;
-  font-size: 20px;
+  text-align: center;
   padding-left: 10px;
   background-color: rgb(223, 221, 221);
 }
